<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="200dp"
    android:background="@color/white"
    android:columnCount="2"
    android:orientation="vertical"
    tools:context="com.brandnew.greatlauncher.fragments.MenuFragment">

    <ImageButton
        android:id="@+id/btn_add_left"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="0"
        android:background="?attr/selectableItemBackground"
        app:srcCompat="@drawable/ic_save_to_list_left" />

    <TextView
        android:layout_column="0"
        android:layout_gravity="center|bottom"
        android:layout_row="0"
        android:padding="4dp"
        android:text="@string/add_left_app" />

    <ImageButton
        android:id="@+id/btn_add_right"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_row="0"
        android:background="?attr/selectableItemBackground"
        app:srcCompat="@drawable/ic_save_to_list_right" />

    <TextView
        android:layout_column="1"
        android:layout_gravity="center|bottom"
        android:layout_row="0"
        android:padding="4dp"
        android:text="@string/add_right_app" />

    <ImageButton
        android:id="@+id/btn_theme"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_column="0"
        android:layout_gravity="center"
        android:background="?attr/selectableItemBackground"
        app:srcCompat="@drawable/ic_theme" />

    <TextView
        android:layout_column="0"
        android:layout_gravity="center|bottom"
        android:layout_row="1"
        android:padding="4dp"
        android:text="@string/add_theme" />

    <ImageButton
        android:id="@+id/btn_settings"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_row="1"
        android:background="?attr/selectableItemBackground"
        android:padding="4dp"
        app:srcCompat="@drawable/ic_settings" />

    <TextView
        android:layout_column="1"
        android:layout_gravity="center|bottom"
        android:layout_row="1"
        android:padding="4dp"
        android:text="@string/settings" />


</GridLayout>
